dark mode fixes

--- a/src/styles/_root-css-vars.css
+++ b/src/styles/_root-css-vars.css
@@ -5,7 +5,7 @@
     --color-background: 0 0% 100%;
     --color-neutral-900: 0 0% 0%;
     --color-neutral-100: 0 0% 100%;
-    --color-link: 29 92% 40%;
+    --color-link: 29 92% 48%;
     --color-focus: 203 90% 39%;
 
     /* Font stacks from https://modernfontstacks.com/ */
@@ -40,8 +40,7 @@
 /* Dark theme: ensure black & white are NOT truly black & white. */
 @media (prefers-color-scheme: dark) {
     :root {
-        --color-brand: 270 50% 60%;
-        --color-text: 0 0% 95%;
+        --color-text: 0 0% 80%;
         --color-background: 0 0% 13%;
         --color-neutral-900: 0 0% 13%;
         --color-neutral-100: 0 0% 95%;
